--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ad_assignment
 spring.datasource.username=root
 spring.datasource.password=root123
+spring.jpa.hibernate.ddl-auto=none 
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
